--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -36,8 +36,7 @@ foreground = ${colors.foreground}
 font-0 = B612:style=Regular:size=9;3
 font-1 = JetBrainsMono Nerd Font:style=Regular:size=9;3
 
-modules-left = date battery cpu memory coretemp network
-;battery, cpu and temp work
+modules-left = date battery cpu memory coretemp pulseaudio-control network 
 modules-center = title
 modules-right = xkeyboard bspwm
 
@@ -239,3 +238,15 @@ label = %temperature-c%
 label-foreground = ${colors.foreground}
 label-warn = %temperature-c%
 label-warn-foreground = #9b0a20
+
+
+; Pulseaudio Control:
+; this bit is reliant on the pulseaudio-control AUR package
+; NOTE: I'm not intending to control audio from polybar. I'm using hotkeys for the control. 
+
+[module/pulseaudio-control]
+type = custom/script
+tail = true
+format =    <label>
+exec = pulseaudio-control --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo: " listen 
+format-foreground = ${colors.foreground}
