--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -35,8 +35,9 @@ foreground = ${colors.foreground}
 
 font-0 = B612:style=Regular:size=9;3
 font-1 = JetBrainsMono Nerd Font:style=Regular:size=9;3
+font-2 = "Noto Sans Symbols:size=13;1"
 
-modules-left = date battery cpu memory coretemp pulseaudio-control network 
+modules-left = date battery cpu memory coretemp pulseaudio-control network cmus 
 modules-center = title
 modules-right = xkeyboard bspwm
 
@@ -121,7 +122,7 @@ type = internal/date
 
 interval = 1.0
 label = %time% %date%
-label-font = 3
+;label-font = 
 
 ;date = %Y-%m-%d%
 ;time = %H:%M
@@ -251,3 +252,41 @@ format =    <label>
 label-foreground = ${colors.foreground}
 exec = pulseaudio-control --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo: " listen 
 format-foreground = ${colors.theme}
+
+[module/cmus]
+type = custom/script
+tail = true
+format =♫  <label>
+exec-if = "sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null | grep -v 'NO_MUSIC'"
+exec = "sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null | grep -v 'NO_MUSIC'"
+label-foreground = ${colors.foreground}
+format-foreground = ${colors.theme}
+
+;[module/cmus]
+;type = custom/script
+;tail = true
+;format =♫  <label>
+;exec = sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null
+;label-foreground = ${colors.foreground}
+;format-foreground = ${colors.theme}
+;format-padding = -1
+
+;[module/cmus]
+;type = custom/script
+;tail = true
+;exec = sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null
+;label-foreground = ${colors.foreground}
+;format-foreground = ${colors.theme}
+
+; Conditionally display the prefix based on the output of the script
+;format-prefix = "♫  "
+;format-prefix-foreground = ${colors.foreground}
+;format-prefix-padding = 1
+;label = %output:~0:8:%
+;label-padding = 1
+
+; Hide module when the output is "NO_MUSIC"
+;hidden-state = %output:~0:8:~
+;hidden-state-text = "NO_MUSIC"
+
+
