--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -250,7 +250,7 @@ type = custom/script
 tail = true
 format =    <label>
 label-foreground = ${colors.foreground}
-exec = pulseaudio-control --sink-nickname "alsa_output.pci-0000_00_1f.3.analog-stereo: " listen 
+exec = pulseaudio-control --format '$VOL_LEVEL%' listen  
 format-foreground = ${colors.theme}
 
 [module/cmus]
@@ -261,5 +261,4 @@ exec-if = "sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null | grep -v '
 exec = "sh /home/synchronous/.config/polybar/cmus.sh 2> /dev/null | grep -v 'NO_MUSIC'"
 label-foreground = ${colors.foreground}
 format-foreground = ${colors.theme}
-
 
