--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -37,7 +37,7 @@ font-0 = B612:style=Regular:size=9;3
 font-1 = JetBrainsMono Nerd Font:style=Regular:size=9;3
 font-2 = "Noto Sans Symbols:size=13;1"
 
-modules-left = date battery cpu memory coretemp pulseaudio-control network cmus 
+modules-left = date battery cpu memory coretemp pulseaudio-control network bluetooth cmus 
 modules-center = title
 modules-right = pomodoro xkeyboard bspwm
 
@@ -273,3 +273,9 @@ exec = "sh /home/synchronous/.config/polybar/pomodoro.sh"
 label-foreground = ${colors.foreground}
 format-foreground = ${colors.theme}
 
+[module/bluetooth]
+type = custom/script
+interval = 10
+exec = /home/synchronous/.config/polybar/scripts/bluetooth.sh
+label-foreground = ${colors.foreground}
+format-foreground = ${colors.theme}
