--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=963
-posy=558
-sizex=947
-sizey=512
+posx=2
+posy=25
+sizex=1912
+sizey=1049
 
 [nitrogen]
 view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/synchronous/Downloads;/home/synchronous/Wallpapers;
+dirs=/home/synchronous/Downloads;/home/synchronous/.wallpapers;
