--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /home/synchronous/.scripts/pomodoro/track.txt
 /home/synchronous/.scripts/pomodoro/on-start.sh
 /home/synchronous/.scripts/pomodoro/on-end.sh
+/home/synchronous/.zshrc_remote
