--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -275,6 +275,11 @@ no-use-damage = false
 #
 xrender-sync-fence = false
 
+# Opacity and whatnot
+opacity-rule = [ "100:class_g = 'Rofi' && focused", "100:class_g = 'Rofi' && !focused" ];
+inactive-opacity = 1.0;
+active-opacity = 1.0
+
 # GLX backend: Use specified GLSL fragment shader for rendering window
 # contents. Read the man page for a detailed explanation of the interface.
 #
