--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/synchronous/.wallpapers/main.jpg
+file=/home/synchronous/.wallpapers/dark-winter-street.png
 mode=0
 bgcolor=#000000
