--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -9,4 +9,4 @@ view=icon
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/synchronous/Downloads;/home/synchronous/.wallpapers;
+dirs=/home/synchronous/.wallpapers;
